# nomothetic

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: SETUP.md  architecture.md  hat_ipc_schema.md  hat_python_client.md  microcontroller_setup.md  nomon_hat_crate.md  phase2_completion.md  phase3_completion.md  phase4_completion.md  phase5_planning.md  roadmap.md
docs/adr/: 001-self-signed-tls-certs.md  002-fastapi-for-rest-api.md  003-mjpeg-streaming.md  004-conditional-imports.md  005-paho-mqtt-for-telemetry.md  006-rust-hat-drivers-separate-repo.md  007-aws-iot-jobs-for-ota.md
examples/: api_server.py
src/nomon/: __init__.py  api.py  camera.py  streaming.py  telemetry.py  updater.py
tests/: test_api.py  test_camera.py  test_streaming.py  test_telemetry.py  test_updater.py
